# astfri

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
libastfri/: CMakeLists.txt  Declaration.hpp  DeclarationFactory.hpp  Expression.hpp  ExpressionFactory.hpp  README.md  Statement.hpp  StatementFactory.hpp  Type.hpp  TypeFactory.hpp  Visitor.hpp
libastfri-cpp/: CMakeLists.txt  ClangManagement.cpp  ClangManagement.hpp  ClangVisitor.cpp  ClangVisitor.hpp  README.md
libastfri-cpp/astfri-cpp/: AstfriCpp.hpp
libastfri-cpp/astfri-cpp/impl/: CMakeLists.txt  ClangManagement.cpp  ClangManagement.hpp  ClangVisitor.cpp  ClangVisitor_Declarations.cpp  ClangVisitor_Expressions.cpp  ClangVisitor_Helpers.cpp  ClangVisitor_Literals.cpp  ClangVisitor_Operators.cpp  ClangVisitor_Statements.cpp  ClangVisitor_Types.cpp
libastfri-cpp/examples/: CMakeLists.txt  created_ASTs.cpp  example.cpp  example2.cpp  example_GPTtest.cpp  example_binop.cpp  example_cpp-ast_dump.txt  example_inheritance.cpp  example_lambda.cpp  example_loops.cpp  example_typedef.cpp  example_types.cpp  main.cpp
libastfri-cpp/impl/: CMakeLists.txt  ClangManagement.cpp  ClangManagement.hpp  ClangVisitor.cpp  ClangVisitor_Declarations.cpp  ClangVisitor_Expressions.cpp  ClangVisitor_Helpers.cpp  ClangVisitor_Literals.cpp  ClangVisitor_Operators.cpp  ClangVisitor_Statements.cpp  ClangVisitor_Types.cpp  CppASTVisitor.cpp
libastfri-cpp/inc/: ClangManagement.hpp  ClangVisitor.hpp  CppASTVisitor.hpp
libastfri-cpp/main/: CMakeLists.txt  main.cpp
libastfri-cpp/presentation_examples/: astexample.cpp  astfriuml_simplified.cpp
libastfri-cpp/utils/: Helper.cpp  Helper.hpp
libastfri-cs/: CMakeLists.txt  README.md
libastfri-cs/examples/: CMakeLists.txt  c_sharp_text_output.cpp
libastfri-cs/impl/: ASTBuilder.cpp  CMakeLists.txt  CSAliases.hpp  CSFwd.hpp  CSModifiers.cpp  CSModifiers.hpp  CSharpASTBuilder.cpp  CSharpASTBuilder.hpp  CSharpTSTreeVisitor.cpp  CSharpTSTreeVisitor.hpp  CSharpTSTreeVisitor_def.cpp  CSharpTSTreeVisitor_expr.cpp  CSharpTSTreeVisitor_stmt.cpp  CSharpTSTreeVisitor_util.cpp  NodeRegistry.cpp  NodeRegistry.hpp  Registries.cpp  Registries.hpp  ScopeContext.cpp  ScopeContext.hpp  SemanticContext.cpp  SemanticContext.hpp  SemanticContext.inl  Source.cpp  SymbolTableBuilder.cpp  SymbolTableBuilder.hpp  TypeContext.cpp  TypeContext.hpp  TypeResolver.cpp  TypeResolver.hpp  TypeTranslator.cpp  TypeTranslator.hpp  utils.cpp  utils.hpp  utils.inl
libastfri-cs/impl/data/: AccessType.hpp  Alias.cpp  Alias.h  CMakeLists.txt  CSModifiers.cpp  CSModifiers.hpp  FileContext.cpp  FileContext.hpp  Identifiers.cpp  Identifiers.hpp  Identifiers.inl  Metadata.cpp  Metadata.hpp  ScopeTree.hpp  ScopeTree.inl  Source.cpp  Source.hpp  SourceFile.cpp  SourceFile.hpp  SymbolTable.cpp  SymbolTable.hpp  SymbolTable.inl  SymbolTree.cpp  SymbolTree.hpp  SymbolTree.inl
libastfri-cs/impl/regs/: CMakeLists.txt  Maps.cpp  Maps.hpp  Maps.inl  NodeType.hpp  Queries.cpp  Queries.h  QueryRegistry.cpp  QueryRegistry.hpp  (+3 more)
libastfri-cs/inc/: ASTBuilder.hpp  CSharpASTBuilder.hpp  SDKProfile.hpp
libastfri-cs/resources/: Main.cs  ts_cs_output.sh
libastfri-java/examples/: CMakeLists.txt  Dummy.txt  example_text_output.cpp  example_uml_output.cpp  java.cpp  json.cpp  main.cpp
libastfri-java/impl/: ASTBuilder.cpp  CMakeLists.txt  ExpressionTransformer.cpp  ExpressionTransformer.hpp  JavaSyntaxTreeBuilder.cpp  NodeMapper.cpp  NodeMapper.hpp  StatementTransformer.cpp  StatementTransformer.hpp  TreeMaker.cpp
libastfri-java/src/: CMakeLists.txt  ExpressionTransformer.cpp  ExpressionTransformer.hpp  NodeGetter.cpp  NodeGetter.hpp  NodeMapper.cpp  NodeMapper.hpp  NodeMapping.hpp  StatementTransformer.cpp  StatementTransformer.hpp  Transformer.cpp  Transformer.hpp  TreeMaker.cpp  TreeMaker.hpp
libastfri-serialize/examples/: CMakeLists.txt  Example.json  JSonDeserialiser.hpp  Makefile  Test.cpp  TestWithTextOutput.cpp  TestWithUmlOutput.cpp  classExample.cpp  exampleFunction.cpp
libastfri-serialize/impl/: AstFriDeSerializer.cpp  AstFriSerializer.cpp  CMakeLists.txt  JsonFormatChecker.cpp
libastfri-text/impl/: ASTTextVisitor.cpp  ASTVisitor.cpp  AbstractBuilder.cpp  AbstractTextBuilder.cpp  AbstractVisitor.cpp  AstfriVisitor.cpp  BasicTextStructure.cpp  CMakeLists.txt  CodeLoader.cpp  CodeVisitor.cpp  Configurator.cpp  Exporter.cpp  GeneralASTVisitor.cpp  GeneralConfigurator.cpp  HtmlFileExporter.cpp  OutputFileManager.cpp  PdfFileExporter.cpp  RtfFileExporter.cpp  TextConfigurator.cpp  TextLibManager.cpp  TxtFileExporter.cpp  conf.json  main.cpp  pseudokod.txt
libastfri-uml/examples/: CMakeLists.txt  config_dark_en_outer.json  config_dark_sk_outer.json  config_light_en.json  config_light_sk.json  default_config.json  example.cpp  example_class.cpp  example_cs_link.cpp  example_external.cpp  umlexample.cpp  umllinkexample.cpp
libastfri-uml/impl/: CMakeLists.txt  ClassVisitor.cpp  ClassVisitor.hpp  Config.cpp  Config.hpp  ElementStructs.cpp  ElementStructs.hpp  PlantUMLOutputter.cpp  PlantUMLOutputter.hpp  TypeConvention.cpp  TypeConvention.hpp  UMLLibWrapper.cpp  UMLOutputter.cpp  UMLOutputter.hpp
libastfri/astfri/: Astfri.hpp
libastfri/doc/: ComponentDiagram.drawio  libastfri.asta
libastfri/impl/: CMakeLists.txt  Concepts.hpp  Declaration.cpp  DeclarationFactory.cpp  Expr.cpp  Expr.inl  ExprFactory.cpp  ExprFwd.hpp  Expression.cpp  Expression.inl  ExpressionFactory.cpp  ExpressionFwd.hpp  Scope.cpp  Scope.hpp  Scope.inl  Statement.cpp  StatementFactory.cpp  StatementFwd.hpp  Stmt.cpp  StmtFactory.cpp  StmtFwd.hpp  Type.cpp  TypeFactory.cpp  TypeFwd.hpp  TypeId.hpp  TypeInfo.inl  TypeQueries.cpp  TypeQueries.hpp  TypeQuery.inl  Utils.hpp
libastfri/inc/: Astfri.hpp  Expr.hpp  ExprFactory.hpp  Stmt.hpp  StmtFactory.hpp  Type.hpp  TypeFactory.hpp  TypeInfo.hpp  TypeQuery.hpp  Visitor.hpp
libastfri/structures/: Type.hpp
libastfri/tests/: CMakeLists.txt  ExprFactoryTest.cpp  Main.cpp  OptPtrTest.cpp  ReqPtrTest.cpp  StmtFactoryTest.cpp  TypeFactoryTest.cpp  TypeInfoTest.cpp
(+275 files in other folders)
